# passman

./: Cargo.toml  README.md  SECURITY.md
src/: cli.rs  clipboard.rs  crypto.rs  entry.rs  error.rs  generator.rs  lib.rs  main.rs  vault.rs
tests/: cli_tests.rs  crypto_tests.rs  vault_tests.rs
